--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,13 +5,13 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
+    "plugin:prettier/recommended",
     "prettier"
   ],
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
   "root": true,
   "rules": {
-    "indent": ["error", 2],
     "react/react-in-jsx-scope": "off"
   }
 }
