--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-skills-categories": "node --watch --env-file=.env.local src/scripts/generate-skills-categories.js"
   },
   "dependencies": {
     "next": "14.1.4",
@@ -30,6 +31,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "globals": "^15.0.0",
+    "openai": "^4.33.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.3.3",
