--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "generate-skills-categories": "node --watch --env-file=.env.local src/scripts/generate-skills-categories.js"
   },
   "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "flag-icons": "^7.2.1",
     "lucide-react": "^0.368.0",
     "next": "14.1.4",
     "next-intl": "^3.11.1",
